# serverless-gateway

./: .dockerignore  .env  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  gateway.env  generate-nginx-conf.sh  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  sls-api-gw-env
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  push.yml  registry.yml  test-deployed-gateway.yml  test-integration.yml  test.yml
cli/: .flake8  CHANGELOG.md  Makefile  README.md  pyproject.toml
cli/cli/: cli.py  client.py  conf.py  credentials.py  gateway.py  infra.py  model.py  observability.py  output.py
cli/cli/commands/: consumer.py  dev.py  domain.py  infra.py  jwt.py  options.py  route.py
cli/cli/commands/human/: errors.py  progress.py
cli/cli/infra/: __init__.py  cockpit.py  container.py  function.py  image.py  manager.py  rdb.py  secrets.py
cli/tests/integration/: common.py  conftest.py  environment.py  test_domains.py  test_routes.py
cli/tests/integration/test_infra/: test_cockpit.py
cli/tests/unit/: test_placeholder.py
container/: Dockerfile  api.yml  kong.conf  nginx.conf  startup.sh
container/conf.d/: api.conf
container/helpers/: json_errors.conf
docs/: .gitignore  Makefile  README.md  advanced.md  architecture.md  auth.md  cors.md  custom.md  development.md  domains.md  kong.md  observability.md  requirements.txt  serverless.md
endpoints/: package-lock.json
func-a/: server.py
gateway/: Dockerfile  Makefile  authentication.py  config.py  docker-compose.yml  endpoint.py  log_config.py  plugin.py  s3.py
gateway-refactor/: plugin-refacto.py
gatewayref/: config.py  endpoint.py  logging.py  plugin-refacto.py
helpers/: robots.conf
scripts/: publish.sh  pypi_auth.sh  start_auth_plugin.sh  start_plugin.sh  start_scw_plugin.sh  tag.sh
scw-gateway/: .gitignore  Makefile  pyproject.toml
scw-sls-gw/: .flake8  plugin.py
tests/: test_plugin.py
(+47 files in other folders)
