[tool.poetry]
name = "sls-doc"
version = "0.1.0"
packages = [{include = "sls_doc"}]
description = ""
authors = ["Serverless team <serverless-team@scaleway.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
click = "8.1.3"
loguru = "0.6.0"
mypy = "0.991"
python = "^3.9"
pyyaml = "6.0"
requests = "2.28.1"
types-pyyaml = "6.0.12.2"
types-requests = "2.28.11.5"

[tool.poetry.scripts]
sls-doc = 'sls_doc.cli:cli'

[tool.poetry.group.dev.dependencies]
autoflake = "1.7.7"
black = "22.10.0"
flake8 = "5.0.4"
isort = "5.10.1"
pytest = "7.2.0"
responses = "0.22.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
testpaths = ["tests"]
